5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1723_2499.log
== TEST (2019-05-09 11:45:38) 
-- CODE:
from math import *

k = int(input("Insira o valor de k: "))

soma = 0
cont = 0
fim = k - 1

while(i <= fim):
	soma = soma + 1 / factorial(i) 
	i = i + 1
print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(i <= fim):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:45:55) 
-- CODE:
from math import *

k = int(input("Insira o valor de k: "))

soma = 0
cont = 0
fim = k - 1

while(i <= fim):
	soma = soma + 1 / factorial(i) 
	i = i + 1
	
print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(i <= fim):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:02) 
-- CODE:
from math import *

k = int(input("Insira o valor de k: "))

soma = 0
cont = 0
fim = k - 1

while (i <= fim):
	soma = soma + 1 / factorial(i) 
	i = i + 1
	
print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while (i <= fim):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:20) 
-- CODE:
from math import *

k = int(input("Insira o valor de k: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + 1 / factorial(i) 
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:46:26) 
-- CODE:
from math import *

k = int(input("Insira o valor de k: "))

soma = 0
i = 0
fim = k - 1

while (i <= fim):
	soma = soma + 1 / factorial(i) 
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.160094
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 21:22:51) 
-- CODE:
from math import */

k = int(input("Insira o valor de k: "))

soma = 0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma + 1 / factorial(i)
	i = i + 1
print(round(soma, 8))
-- ERROR:
File "XXXX", line 1
    from math import */
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 21:22:55) 
-- CODE:
from math import *

k = int(input("Insira o valor de k: "))

soma = 0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma + 1 / factorial(i)
	i = i + 1
print(round(soma, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:23:01) 
-- CODE:
from math import *

k = int(input("Insira o valor de k: "))

soma = 0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma + 1 / factorial(i)
	i = i + 1
print(round(soma, 8))
-- EXECUTION TIME:
0.143848
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
